[tool.poetry]
name = "difftools"
version = "0.1.0-a1"
description = "Fast tools for searching, diffing, and merging text."
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 2 - Pre-Alpha", 
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing","Topic :: Utilities",
    ]
repository = "https://github.com/mawicks/difftools"
authors = ["Mark Wicks <mawicks@gmail.com>"]
keywords = ["diff", "LCS", "merge", "search", "text-processing"]
readme = "README.md"
include = ["src/**/*.py", "LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.10"
rich = ">=10.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
tabulate = "^0.9.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "tests/helpers"
